# modbot

./: .gitignore  Cargo.toml  README.md
server/: db.rs  main.rs
server/discord/: client.rs  commands.rs  commandtypes.rs  embed.rs  mod.rs  punishment.rs  thread.rs
src/: commandtypes.rs  main.rs
