[package]
name = "modbot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "modbot"
path = "server/main.rs"


[dependencies]
arrayvec = "0.7.6"
async-recursion = "1.1.1"
polodb_core = "5.1.4"
regex = "1.12.2"
serde = "1.0.228"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

